patch: fix table styleing and overflow on mobile

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_tableCommon.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_tableCommon.scss
@@ -5,6 +5,7 @@
 
 table {
     width: 100%;
+    overflow-wrap: normal;
 }
 
 table, tr, th, td {
